#time 30m #comment menambah header

--- a/index.html
+++ b/index.html
@@ -8,12 +8,46 @@
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css" />
     <style>
     .container{
-      margin-top: 5%;
+      margin-top: 2%;
     }
+
+    p.prime{
+      font-size: 2.5rem;
+      font-weight: bold;
+      text-align: center;
+      margin: 0 0 0.7em;
+      line-height: 0em;
+    }
+
+    p.secondary{
+      font-size: 2rem;
+      text-align: center;
+      margin: 0 0 0.7em;
+      line-height: 1.25em;
+    }
+
+
+
     </style>
   </head>
   <body>
     <div class="container">
+      <div class="sixteen wide column">
+        <div class="ui three column centered grid">
+          <div class="three wide column">
+            <img class="ui fluid image" src="/images/Indihome_Fiber.png">
+          </div>
+          <div class="eight wide column">
+            <p class="secondary">Selamat Datang di</p>
+            <p class="prime">Aplikasi Drive-Thru Payment</p>
+            <p class="secondary">PT. Telkom Indonesia wilayah Bengkulu</p>
+          </div>
+          <div class="two wide column">
+            <img class="ui fluid image" src="/images/logo_telkom.png">
+          </div>
+        </div>
+      </div>
+
       <div class="ui two column centered grid">
         <div class="column">
           <form class="ui large form">
