--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
             </tbody>
           </table>
           <p>
+            <small>*sudah termasuk PPn</small><br />
+            <small>*angka tagihan di luar denda keterlambatan pembayaran</small>
             <h4>Bayar tagihan?</h4>
+
           </p>
         </div>
       </div>
