--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
       width: 100%;
       margin-bottom: 20px;
     }
+
+    .bold{
+      font-weight: bold;
+    }
     /* Tiny Modal Width */
 
     @media only screen and (max-width: 767px) {
@@ -80,8 +84,8 @@
 
     @media only screen and (min-width: 1200px) {
       .ui.tiny.modal {
-        width: 400px;
-        margin: 0em 0em 0em -200px;
+        width: 600px;
+        margin: 0em 0em 0em -300px;
       }
     }
 
@@ -161,7 +165,7 @@
                   No
                 </td>
                 <td>
-                  <span id="resp_no">xxxxxxxxx</span>
+                  <span class="bold" id="resp_no">xxxxxxxxx</span>
                 </td>
               </tr>
               <tr>
@@ -169,7 +173,7 @@
                   Nama
                 </td>
                 <td>
-                  <span id="resp_name">xxxxxxxxx</span>
+                  <span class="bold" id="resp_name">xxxxxxxxx</span>
                 </td>
               </tr>
               <tr>
@@ -177,12 +181,14 @@
                   Tagihan
                 </td>
                 <td>
-                  <span id="resp_bill">xxxxxxxxx</span>
+                  <span class="bold" id="resp_bill">xxxxxxxxx</span>
                 </td>
               </tr>
             </tbody>
           </table>
           <p>
+            <small>*sudah termasuk PPn</small><br />
+            <small>*angka tagihan di luar denda keterlambatan pembayaran</small>
             <h4>Bayar tagihan?</h4>
           </p>
         </div>
