#time 2h #comment Add notification modal

--- a/client.html
+++ b/client.html
@@ -34,7 +34,7 @@
         .append($('<div>').addClass("ui message")
           .append($('<i>').addClass("close icon"))
           .append($('<div>').addClass("header").text("No: "+ msg.no))
-          .append($('<p>').text("Name: "+msg.name+", Tagihan: "+msg.bill))
+          .append($('<p>').text("Name: "+msg.name+", Tagihan: "+msg.total))
         );
       });
 
