#time 10m #comment Update placeholder, footer

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="field">
               <label>No. Telepon / Internet:</label>
               <div class="ui input">
-                <input id="m" type="text" name="id_pelanggan" placeholder="+62 442 500" />
+                <input id="m" type="text" name="id_pelanggan" placeholder="073XXXXX / 111XXXXXX" />
               </div>
             </div>
             <div class="field">
