--- a/client.html
+++ b/client.html
@@ -14,11 +14,29 @@
       margin-top: 2%;
       margin-left: 1%;
       }
+
+      p.prime{
+        font-size: 2rem;
+        font-weight: bold;
+        text-align: left;
+        margin: 0 0 0.7em;
+        line-height: 0em;
+        color: #C61E0C;
+      }
+
+      p.secondary{
+        font-size: 1.5rem;
+        text-align: left;
+        margin: 0 0 0.7em;
+        line-height: 1.25em;
+        color: #C61E0C;
+      }
       </style>
   </head>
   <body>
     <div class="container">
-      <h3 class="ui blue header">Prototype Realtime Notification</h3>
+      <p class="prime">Telkom Drive-Thru Payment</p>
+      <p class="secondary">Realtime Notification</p>
       <div class="ui two column grid">
         <div class="column">
           <table id="infoTable" class="ui fixed single line table hover" width="100%"></table>
