--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Stand Monitor</title>
+
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="/semantic/dist/semantic.min.js"></script>
 
@@ -100,18 +101,13 @@
     }
 
     /* Footer */
-    @media screen and (max-height: 480px) and (max-width: 1366px) {
+    @media only screen and (max-height: 460px) and (max-width: 1280px) {
       .footer {
         display: none; } }
 
-    @media screen and (max-height: 600px) and (max-width: 1280px) {
+    @media only screen and (max-height: 470px) and (max-width: 1366px) {
       .footer {
         display: none; } }
-
-    @media screen and (max-height: 1080px) and (max-width: 2560px) {
-      .footer {
-        display: none; } }
-
 
     </style>
   </head>
