--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Stand Monitor</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="/semantic/dist/semantic.min.js"></script>
 
@@ -101,6 +101,12 @@
     }
 
     /* Footer */
+    @media only screen and (max-height: 495px) and (max-width: 987px) {
+      .footer {
+        display: none; }
+
+      }
+
     @media only screen and (max-height: 460px) and (max-width: 1280px) {
       .footer {
         display: none; } }
