add meta viewport

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Stand Monitor</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="/semantic/dist/semantic.min.js"></script>
 
