--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
     .bold{
       font-weight: bold;
     }
+
+    .note{
+      margin-top: 5px;
+      margin-bottom: 5px;
+    }
     /* Tiny Modal Width */
 
     @media only screen and (max-width: 767px) {
@@ -136,6 +141,7 @@
               <div class="ui input">
                 <input id="m" type="text" name="id_pelanggan" placeholder="073XXXXX / 111XXXXXX" />
               </div>
+              <h6 class="note">* Jika Anda menggunakan lebih dari satu layanan, tagihan yang akan muncul merupakan total tagihan dari semua layanan yang Anda gunakan.</h6>
             </div>
             <div class="field">
               <button class="ui right floated button">CEK</button>
