--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css" />
     <style>
     body {
-      background-color: #F2F2F2; }
+      background-color: #AD0000;
+      color: #ffffff;
+    }
 
     .container{
       margin-top: 2%;
@@ -66,6 +68,29 @@
     .note{
       margin-top: 5px;
       margin-bottom: 5px;
+    }
+
+    .centered{
+      text-align: center;
+    }
+
+    label{
+      color: #ffffff;
+    }
+
+    .radio-user{
+      margin-left: 32% !important;
+      margin-top: 10px !important;
+    }
+    .btn-cek{
+      background-color: grey !important;
+      color: white !important;
+      margin-left: 45% !important;
+    }
+    .input_number{
+      width: 80%;
+      margin-left: auto !important;
+      margin-right: auto !important;
     }
     /* Tiny Modal Width */
 
@@ -134,33 +159,38 @@
           <img class="ui fluid image" src="/images/logo_telkom.png">
         </div>
       </div>
-      <div class="ui centered grid">
-        <div class="twelve wide column">
+      <div class="ui grid">
+        <div class="three wide column">
+
+        </div>
+        <div class="eleven wide column">
           <form class="ui large form">
-            <div class="inline fields">
-              <label for="type">Pilih salah satu:</label>
+            <div class="centered">
+              Pilih salah satu:
+            </div>
+            <div class="fields radio-user">
               <div class="field">
                 <div class="ui radio checkbox">
                   <input type="radio" name="type[]" checked="" tabindex="0" class="hidden">
-                  <label>No. Telp.</label>
+                  <label style="color: #ffffff;">No. Telepon</label>
                 </div>
               </div>
               <div class="field">
                 <div class="ui radio checkbox">
                   <input type="radio" name="type[]" tabindex="0" class="hidden">
-                  <label>No. Internet</label>
+                  <label style="color: #ffffff;">No. Internet</label>
                 </div>
               </div>
             </div>
-            <div class="field">
-              <label>No. Telepon / Internet:</label>
+            <div class="field input_number">
+              <label style="color: #ffffff;text-align: center;">No. Telepon / Internet:</label>
               <div class="ui input">
                 <input id="m" type="number" name="id_pelanggan" placeholder="073XXXXX / 111XXXXXX" />
               </div>
               <h6 class="note">* Jika Anda menggunakan lebih dari satu layanan, tagihan yang akan muncul merupakan total tagihan dari semua layanan yang Anda gunakan.</h6>
             </div>
             <div class="field">
-              <button class="ui right floated button">CEK</button>
+              <button class="ui button btn-cek">CEK</button>
             </div>
           </form>
         </div>
