--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     .radio-user{
-      margin-left: 32% !important;
+      margin-left: 36% !important;
       margin-top: 10px !important;
     }
     .btn-cek{
@@ -160,10 +160,10 @@
         </div>
       </div>
       <div class="ui grid">
-        <div class="three wide column">
+        <div class="one wide column">
 
         </div>
-        <div class="eleven wide column">
+        <div class="fifteen wide column">
           <form class="ui large form">
             <div class="centered">
               Pilih salah satu:
