--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
         </div>
       </div>
       <div class="ui grid">
-        <div class="one wide column">
+        <div class="three wide column">
 
         </div>
-        <div class="fifteen wide column">
+        <div class="eleven wide column">
           <form class="ui large form">
             <div class="centered">
               Pilih salah satu:
