input text-align = center

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="field input_number">
               <label style="color: #ffffff;text-align: center;">No. Telepon / Internet:</label>
               <div class="ui input">
-                <input id="m" type="number" name="id_pelanggan" placeholder="073XXXXX / 111XXXXXX" />
+                <input id="m" style="text-align: center;" type="number" name="id_pelanggan" placeholder="073XXXXX / 111XXXXXX" />
               </div>
               <h6 class="note">* Jika Anda menggunakan lebih dari satu layanan, tagihan yang akan muncul merupakan total tagihan dari semua layanan yang Anda gunakan.</h6>
             </div>
