change margin radio to 29%, input number width to 60%, div class column

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     .radio-user{
-      margin-left: 30% !important;
+      margin-left: 29% !important;
       margin-top: 10px !important;
     }
     .btn-cek{
@@ -88,7 +88,7 @@
       margin-left: 45% !important;
     }
     .input_number{
-      width: 80%;
+      width: 60%;
       margin-left: auto !important;
       margin-right: auto !important;
     }
@@ -155,15 +155,14 @@
           <p class="prime">Aplikasi Drive-Thru Payment</p>
           <p class="secondary">PT. Telkom Indonesia wilayah Bengkulu</p>
         </div>
-        <div class="two wide column">
+        <div class="three wide column">
           <img class="ui fluid image" src="/images/logo_telkom.png">
         </div>
       </div>
       <div class="ui grid">
-        <div class="three wide column">
-
+        <div class="two wide column">
         </div>
-        <div class="eleven wide column">
+        <div class="twelve wide column">
           <form class="ui large form">
             <div class="centered">
               Pilih salah satu:
@@ -193,6 +192,8 @@
               <button class="ui button btn-cek">CEK</button>
             </div>
           </form>
+        </div>
+		<div class="two wide column">
         </div>
       </div>
       <div class="footer">
