--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <p class="prime">Aplikasi Drive-Thru Payment</p>
           <p class="secondary">PT. Telkom Indonesia wilayah Bengkulu</p>
         </div>
-        <div class="three wide column">
+        <div class="two wide column">
           <img class="ui fluid image" src="/images/logo_telkom.png">
         </div>
       </div>
