--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
           <p class="prime">Aplikasi Drive-Thru Payment</p>
           <p class="secondary">PT. Telkom Indonesia wilayah Bengkulu</p>
         </div>
-        <div class="two wide column">
-          <img class="ui fluid image" src="/images/logo_telkom.png">
+        <div class="three wide column">
+          <img class="ui fluid image" src="/images/logo_telkom.png" style="width: 60%;">
         </div>
       </div>
       <div class="ui grid">
