add margin top -20px, change img width to 80%

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
           <p class="secondary">PT. Telkom Indonesia wilayah Bengkulu</p>
         </div>
         <div class="three wide column">
-          <img class="ui fluid image" src="/images/logo_telkom.png" style="width: 60%;">
+          <img class="ui fluid image" src="/images/logo_telkom.png" style="width: 80%;">
         </div>
       </div>
-      <div class="ui grid">
+      <div class="ui grid" style="margin-top: -20px">
         <div class="two wide column">
         </div>
         <div class="twelve wide column">
