margin top input field -10px

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </div>
               </div>
             </div>
-            <div class="field input_number">
+            <div class="field input_number" style="margin-top: -10px">
               <label style="color: #ffffff;text-align: center;">No. Telepon / Internet:</label>
               <div class="ui input">
                 <input id="m" style="text-align: center;" type="number" name="id_pelanggan" placeholder="073XXXXX / 111XXXXXX" />
