--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           </table>
           <p>
             <small>*sudah termasuk PPn</small><br />
-            <small>*angka tagihan di luar denda keterlambatan pembayaran</small>
+            <small>*angka tagihan di luar biaya administrasi sebesar Rp. 2.500,- dan denda keterlambatan pembayaran</small>
             <h4>Bayar tagihan?</h4>
 
           </p>
