Add loading effect

--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@
 
     </style>
   </head>
-  <body>
+  <body class="blurring">
+    <div class="ui dimmer">
+      <div class="ui text loader">Silahkan Tunggu...</div>
+    </div>
     <div class="container">
       <div class="ui three column centered grid">
         <div class="three wide column">
@@ -285,6 +288,7 @@
       socket.temp = {};
 
       $('form').submit(function(){
+        $('.dimmer').dimmer('show');
         //socket.emit('query info', $('#m').val());
         var $form = $('form');
         var formData = {};
@@ -328,6 +332,7 @@
       });
 
       $(document).ready(function(){
+
         $("#info_tagihan").hide();
         $('.ui.radio.checkbox').checkbox();
         $("#m").focus().click();
@@ -343,11 +348,14 @@
       });
 
       function openModal(data){
+
         socket.temp = data;
         $("#resp_no").text(data.no);
         $("#resp_name").text(data.name);
         $("#resp_bill").text(data.total);
-        $('.ui.modal.confirm').modal('show');
+        setTimeout(hideDimmer, 2000);
+
+
       }
 
       function openWarningModal(type){
@@ -408,6 +416,11 @@
           },
           error: function(){}
         });
+      }
+
+      function hideDimmer(){
+        $('.dimmer').dimmer('hide');
+        $('.ui.modal.confirm').modal('show');
       }
     </script>
   </body>
